tmall category manager use spring mvc

--- a/tmall-web/src/main/resources/dev/ValidationMessages_zh_CN.properties
+++ b/tmall-web/src/main/resources/dev/ValidationMessages_zh_CN.properties
@@ -3,3 +3,4 @@ lastName.size=Last name \u7684\u957f\u5ea6\u5fc5\u987b\u5728 {min} \u548c {max} 
 username.size=Username \u7684\u957f\u5ea6\u5fc5\u987b\u5728 {min} \u548c {max} \u4e4b\u95f4.
 password.size=Password \u7684\u957f\u5ea6\u5fc5\u987b\u5728 {min} \u548c {max} \u4e4b\u95f4.
 email.valid=Email \u7684\u683c\u5f0f\u4e0d\u5408\u6cd5.
+category.name.size=\u5206\u7c7b\u540d\u79f0\u7684\u957f\u5ea6\u5fc5\u987b\u4ecb\u4e8e {min} \u548c {max} \u4e4b\u95f4
