add productController and propertyController

--- a/tmall-web/src/main/resources/dev/ValidationMessages_zh_CN.properties
+++ b/tmall-web/src/main/resources/dev/ValidationMessages_zh_CN.properties
@@ -1,6 +1,15 @@
-firstName.size=First name \u7684\u957f\u5ea6\u5fc5\u987b\u5728 {min} \u548c {max} \u4e4b\u95f4.
-lastName.size=Last name \u7684\u957f\u5ea6\u5fc5\u987b\u5728 {min} \u548c {max} \u4e4b\u95f4.
-username.size=Username \u7684\u957f\u5ea6\u5fc5\u987b\u5728 {min} \u548c {max} \u4e4b\u95f4.
-password.size=Password \u7684\u957f\u5ea6\u5fc5\u987b\u5728 {min} \u548c {max} \u4e4b\u95f4.
-email.valid=Email \u7684\u683c\u5f0f\u4e0d\u5408\u6cd5.
-category.name.size=\u5206\u7c7b\u540d\u79f0\u7684\u957f\u5ea6\u5fc5\u987b\u4ecb\u4e8e {min} \u548c {max} \u4e4b\u95f4
+firstName.size=First name \u957f\u5ea6\u5fc5\u987b\u5728 {min} \u548c {max} \u4e4b\u95f4.
+lastName.size=Last name \u957f\u5ea6\u5fc5\u987b\u5728 {min} \u548c {max} \u4e4b\u95f4.
+username.size=Username \u957f\u5ea6\u5fc5\u987b\u5728 {min} \u548c {max} \u4e4b\u95f4.
+password.size=Password \u957f\u5ea6\u5fc5\u987b\u5728 {min} \u548c {max} \u4e4b\u95f4.
+email.valid=Email \u683c\u5f0f\u4e0d\u5408\u6cd5.
+category.name.size=\u5206\u7c7b\u540d\u79f0\u957f\u5ea6\u5fc5\u987b\u4ecb\u4e8e {min} \u548c {max} \u4e4b\u95f4
+property.name.size=\u5c5e\u6027\u540d\u79f0\u957f\u5ea6\u5fc5\u987b\u4ecb\u4e8e {min} \u548c {max} \u4e4b\u95f4
+product.name.size=\u4ea7\u54c1\u540d\u79f0\u957f\u5ea6\u5fc5\u987b\u4ecb\u4e8e {min} \u548c {max} \u4e4b\u95f4
+product.subtitle.size=\u4ea7\u54c1\u5c0f\u6807\u9898\u957f\u5ea6\u5fc5\u987b\u4ecb\u4e8e {min} \u548c {max} \u4e4b\u95f4
+product.original_price.min=\u4ea7\u54c1\u539f\u4ef7\u683c\u5fc5\u987b\u5927\u4e8e {value}
+product.original_price.empty=\u4ea7\u54c1\u539f\u4ef7\u683c\u4e0d\u80fd\u4e3a\u7a7a
+product.promote_price.min=\u4ea7\u54c1\u4f18\u60e0\u4ef7\u683c\u5fc5\u987b\u5927\u4e8e {value}
+product.promote_price.empty=\u4ea7\u54c1\u4f18\u60e0\u4ef7\u683c\u4e0d\u80fd\u4e3a\u7a7a
+product.stock.min=\u4ea7\u54c1\u5e93\u5b58\u5fc5\u987b\u5927\u4e8e\u7b49\u4e8e {value}
+product.stock.empty=\u4ea7\u54c1\u5e93\u5b58\u4e0d\u80fd\u4e3a\u7a7a
