1.refactor controller 2.add homeController and userController

--- a/tmall-web/src/main/resources/dev/ValidationMessages_zh_CN.properties
+++ b/tmall-web/src/main/resources/dev/ValidationMessages_zh_CN.properties
@@ -13,3 +13,5 @@ product.promote_price.min=\u4ea7\u54c1\u4f18\u60e0\u4ef7\u683c\u5fc5\u987b\u5927
 product.promote_price.empty=\u4ea7\u54c1\u4f18\u60e0\u4ef7\u683c\u4e0d\u80fd\u4e3a\u7a7a
 product.stock.min=\u4ea7\u54c1\u5e93\u5b58\u5fc5\u987b\u5927\u4e8e\u7b49\u4e8e {value}
 product.stock.empty=\u4ea7\u54c1\u5e93\u5b58\u4e0d\u80fd\u4e3a\u7a7a
+user.name.size=\u7528\u6237\u540d\u957f\u5ea6\u5fc5\u987b\u4ecb\u4e8e {min} \u548c {max} \u4e4b\u95f4
+user.password.size=\u5bc6\u7801\u957f\u5ea6\u5fc5\u987b\u4ecb\u4e8e {min} \u548c {max} \u4e4b\u95f4
